--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button id="poi-toggle">Show POIs</button>
+    <div id="loading">Loading model...</div>
     <div id="poi-container"></div>
     <div id="camera-stats"></div>
     <div id="poi-info"></div>
